# django-super-survey

./: LICENSE  setup.cfg
django_super_survey/: __init__.py  apps.py  constants.py  models.py  querysets.py  settings.py  storage.py  utils.py
django_super_survey/migrations/: 0001_initial.py  0002_alter_answer_id_alter_question_id_and_more.py
