[metadata]
name = whisper-benchmark
version = attr: django_super_survey.__version__
author = Anthony Monthe
author-email = anthony@cloud-mercato.com
url = https://github.com/cloudmercato/django-super-survey
project_urls = 
summary = "Django reusable app for surveys management
description-file = file: README.rst
long_description = file: README.rst
description-content-type = text/x-rst; charset=UTF-8
license = BSD

requires-dist =
    setuptools

classifier =
    Development Status :: 4 - Beta
    Environment :: Web
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP

keywords = survey, django

[options]
zip_safe = False
include_package_data = True
package_dir=
packages=find:
    
install_requires =

test_suite = django_super_survey.tests
tests_require =

[coverage:run]
omit = django_super_survey/tests/*
branch = True
source = django_super_survey

[coverage:report]
show_missing = true
exclude_lines =
    noqa
    NotImplemented
